--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -65,28 +65,28 @@
     <Compile Include="Asperite\PixelFormats\GrayscalePixel.cs" />
     <Compile Include="Asperite\PixelFormats\IndexedPixel.cs" />
     <Compile Include="Asperite\PixelFormats\RGBAPixel.cs" />
-    <Compile Include="ColliderRectangle.cs" />
-    <Compile Include="ColliderCircle.cs" />
+    <Compile Include="Collisions\ColliderRectangle.cs" />
+    <Compile Include="Collisions\ColliderCircle.cs" />
     <Compile Include="Directions.cs" />
     <Compile Include="GameComponent.cs" />
     <Compile Include="DataStreaming\BinReader.cs" />
     <Compile Include="DataStreaming\BinWriter.cs" />
     <Compile Include="InputMap.cs" />
-    <Compile Include="Edge.cs" />
-    <Compile Include="HalfEdge.cs" />
+    <Compile Include="Geometry\Edge.cs" />
+    <Compile Include="Geometry\HalfEdge.cs" />
     <Compile Include="PathFinding\AStar.cs" />
     <Compile Include="PathFinding\Path.cs" />
     <Compile Include="PathFinding\PathNode.cs" />
-    <Compile Include="Plane.cs" />
+    <Compile Include="Geometry\Plane.cs" />
     <Compile Include="SpaceTrees\ISearchableSpace.cs" />
-    <Compile Include="Triangle.cs" />
-    <Compile Include="Triangulation\ConstrainedDelauney.cs" />
-    <Compile Include="Vertex.cs" />
-    <Compile Include="TriangleRender.cs" />
-    <Compile Include="VerticesRender.cs" />
+    <Compile Include="Geometry\Triangle.cs" />
+    <Compile Include="Geometry\ConstrainedDelauney.cs" />
+    <Compile Include="Geometry\Vertex.cs" />
+    <Compile Include="GameObjects\TriangleRender.cs" />
+    <Compile Include="GameObjects\VerticesRender.cs" />
     <Compile Include="Logguer.cs" />
     <Compile Include="MouseButton.cs" />
-    <Compile Include="MultiSoundEffectPlayer.cs" />
+    <Compile Include="GameObjects\MultiSoundEffectPlayer.cs" />
     <Compile Include="Network\ClientWorker.cs" />
     <Compile Include="Network\Commands\UnspawnObjectCommand.cs" />
     <Compile Include="Network\INetworkSerializable.cs" />
@@ -101,7 +101,7 @@
     <Compile Include="Network\NetworkClient.cs" />
     <Compile Include="Network\CommandHelper.cs" />
     <Compile Include="Network\CommunicationChannel.cs" />
-    <Compile Include="NetworkGameObject.cs" />
+    <Compile Include="Network\NetworkGameObject.cs" />
     <Compile Include="Network\NetworkServer.cs" />
     <Compile Include="Network\SocketChannel.cs" />
     <Compile Include="Network\SocketServer.cs" />
@@ -110,7 +110,7 @@
     <Compile Include="ErrorHelper.cs" />
     <Compile Include="GameLoop.cs" />
     <Compile Include="GameManager.cs" />
-    <Compile Include="GameObjectEnums.cs" />
+    <Compile Include="StartPosition.cs" />
     <Compile Include="GameTimeService.cs" />
     <Compile Include="GraphicSettings.cs" />
     <Compile Include="Particules\OpacityEffect.cs" />
@@ -121,9 +121,9 @@
     <Compile Include="Particules\ParticuleData.cs" />
     <Compile Include="Particules\ParticuleEmitter.cs" />
     <Compile Include="Particules\EmissionData.cs" />
-    <Compile Include="LineRender.cs" />
+    <Compile Include="GameObjects\LineRender.cs" />
     <Compile Include="ServiceProvider.cs" />
-    <Compile Include="MultiTextureRender.cs" />
+    <Compile Include="GameObjects\MultiTextureRender.cs" />
     <Compile Include="SpaceTrees\Space2DTree.cs" />
     <Compile Include="SpaceTrees\Space2DTreeResult.cs" />
     <Compile Include="SpaceTrees\Space2DTreeNode.cs" />
@@ -133,10 +133,10 @@
     <Compile Include="AverageCalculator.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="CharacterInput.cs" />
-    <Compile Include="ColliderContainer.cs" />
-    <Compile Include="Collider.cs" />
-    <Compile Include="Collision.cs" />
-    <Compile Include="CollisionHelper.cs" />
+    <Compile Include="Collisions\ColliderContainer.cs" />
+    <Compile Include="Collisions\Collider.cs" />
+    <Compile Include="Collisions\Collision.cs" />
+    <Compile Include="Collisions\CollisionHelper.cs" />
     <Compile Include="ColorExtension.cs" />
     <Compile Include="Content.cs" />
     <Compile Include="ContentWatcher.cs" />
@@ -159,7 +159,7 @@
       <DependentUpon>TileSetEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="EditModeService.cs" />
-    <Compile Include="DebugInfoRender.cs" />
+    <Compile Include="GameObjects\DebugInfoRender.cs" />
     <Compile Include="GameObjectTypesLoader.cs" />
     <Compile Include="DrawingContext.cs" />
     <Compile Include="Font.cs" />
@@ -177,34 +177,34 @@
     <Compile Include="MouseManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameObject.cs" />
-    <Compile Include="FPSRender.cs" />
+    <Compile Include="GameObjects\FPSRender.cs" />
     <Compile Include="Force.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
-    <Compile Include="RigidBody.cs" />
-    <Compile Include="SoundEffectPlayer.cs" />
+    <Compile Include="Components\RigidBody.cs" />
+    <Compile Include="GameObjects\SoundEffectPlayer.cs" />
     <Compile Include="SpriteAnimation.cs" />
-    <Compile Include="SpriteAnimationRender.cs" />
+    <Compile Include="GameObjects\SpriteAnimationRender.cs" />
     <Compile Include="SpriteAnimationFrame.cs" />
-    <Compile Include="SpriteAnimator.cs" />
-    <Compile Include="TextRender.cs" />
-    <Compile Include="SpriteRender.cs" />
+    <Compile Include="GameObjects\SpriteAnimator.cs" />
+    <Compile Include="GameObjects\TextRender.cs" />
+    <Compile Include="GameObjects\SpriteRender.cs" />
     <Compile Include="Texture2DExtensions.cs" />
     <Compile Include="Texture2DHelper.cs" />
-    <Compile Include="PrimitiveRender.cs" />
-    <Compile Include="TextureRender.cs" />
+    <Compile Include="GameObjects\PrimitiveRender.cs" />
+    <Compile Include="GameObjects\TextureRender.cs" />
     <Compile Include="RectangleHelper.cs" />
     <Compile Include="RectangleExtensions.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="Sprite.cs" />
-    <Compile Include="TileGameObject.cs" />
+    <Compile Include="GameObjects\TileGameObject.cs" />
     <Compile Include="TileSet.cs" />
     <Compile Include="TilesJsonConverter.cs" />
-    <Compile Include="TileSetRender.cs" />
-    <Compile Include="Triangulation\GeometryHelper.cs" />
+    <Compile Include="GameObjects\TileSetRender.cs" />
+    <Compile Include="Geometry\GeometryHelper.cs" />
     <Compile Include="Vector2Extensions.cs" />
     <Compile Include="VectorHelper.cs" />
     <Compile Include="Win32.cs" />
