--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -68,6 +68,11 @@
     <Compile Include="Collisions\ColliderRectangle.cs" />
     <Compile Include="Collisions\ColliderCircle.cs" />
     <Compile Include="EmptyGameObject.cs" />
+    <Compile Include="Network\ClientServerCommand.cs" />
+    <Compile Include="Network\Commands\NewConnectionCommand.cs" />
+    <Compile Include="Network\IServerCommand.cs" />
+    <Compile Include="Network\IClientCommand.cs" />
+    <Compile Include="Network\ServerCommandArgs.cs" />
     <Compile Include="Renderers\LineRenderer.cs" />
     <Compile Include="Renderers\MultiTextureRenderer.cs" />
     <Compile Include="Renderers\TextureRenderer.cs" />
@@ -101,13 +106,13 @@
     <Compile Include="Network\Commands\MovementCommand.cs" />
     <Compile Include="Network\Commands\SpawnPlayerObjectCommand.cs" />
     <Compile Include="Network\Commands\SpawnObjectCommand.cs" />
-    <Compile Include="Network\IClientCommand.cs" />
+    <Compile Include="Network\ClientCommand.cs" />
     <Compile Include="Network\ICommand.cs" />
     <Compile Include="Network\InProcessChannel.cs" />
-    <Compile Include="Network\IServerCommand.cs" />
+    <Compile Include="Network\ServerCommand.cs" />
     <Compile Include="Network\NetworkClient.cs" />
     <Compile Include="Network\CommandHelper.cs" />
-    <Compile Include="Network\CommunicationChannel.cs" />
+    <Compile Include="Network\ICommunicationChannel.cs" />
     <Compile Include="Network\NetworkGameObject.cs" />
     <Compile Include="Network\NetworkServer.cs" />
     <Compile Include="Network\SocketChannel.cs" />
